# access-it

./: .gitignore
backend/: Dockerfile  deploy_prod.sh  main.py  pyproject.toml
backend/devops/cloud_run/: cloud_run.tf  provider.tf  variables.tf
backend/devops/registry/: container_registry.tf  provider.tf
backend/src/: __init__.py  access_database_already_exist.py  access_database_does_not_exist.py  create_table.py  database_connection.py  databases.py  describe_table.py  insert_row.py  list_tables.py  read_table.py  routes.py
backend/src/tests/: test_create_table.py  test_database_connection.py  test_databases.py  test_describe_table.py  test_insert_row.py  test_list_tables.py  test_read_table.py  test_routes.py
devops/: cloud_run.tf  cloud_storage.tf  load_balancer.tf  provider.tf  variable.tf
frontend/: deploy_prod.sh  package.json
frontend/access-it/: .eslintcache  package.json
frontend/access-it/src/: api.ts
frontend/access-it/src/__mocks__/: api.ts
frontend/devops/: .terraform.lock.hcl  cloud_storage.tf  provider.tf  variable.tf
frontend/src/: App.tsx  AppContainer.tsx  DatabasesContainer.tsx  Root.tsx  index.css  index.tsx  routes.ts
frontend/src/__tests__/: App.test.tsx  api.test.ts
frontend/src/api/: api.ts  models.ts
frontend/src/commons/: fireEventUtils.ts
frontend/src/config/: config.ts
frontend/src/databases/: DatabaseContainer.tsx  DatabaseRow.tsx  DatabaseTableContainer.tsx  DatabasesContainer.tsx  NewDatabaseForm.tsx  NewRowForm.tsx  NewTableForm.tsx  TableDescriptionDialog.tsx
frontend/src/utils/: useWindowSize.ts
(+18 files in other folders)
